Address review feedback: Java 11+ with HttpClient, required constructors, Duration types, Makefile
Co-authored-by: ribtoks <505555+ribtoks@users.noreply.github.com>